Set ZSH as default

--- a/scripts/install
+++ b/scripts/install
@@ -25,5 +25,8 @@ echo "› installers"
 # find the installers and run them iteratively
 find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
 
+echo "› Set ZSH as default"
+chsh -s $(which zsh)
+
 echo ''
 echo '  All stuff installed!'
