--- a/scripts/install
+++ b/scripts/install
@@ -8,15 +8,15 @@ cd "$(dirname $0)"/..
 
 # First package managers
 
-echo "› nvm"
-echo "  Installing nvm for you."
-# Install nvm + latest
-curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash
+# Install nvm + latest -> now ZSH plugin (via Antigen)
+# echo "› nvm"
+# echo "  Installing nvm for you."
+# curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash
 
 # Install homebrew
 homebrew/install.sh 2>&1
 
-Run Homebrew through the Brewfile
+# Run Homebrew through the Brewfile
 echo "› brew bundle"
 brew bundle
 
@@ -25,13 +25,13 @@ brew bundle
 echo "› Mac OS defaults"
 macos/defaults.sh
 
-echo "› installers"
-# find the installers and run them iteratively
-find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
-
 # Third, ZSH
 echo "› Set ZSH as default"
 chsh -s $(which zsh)
+
+echo "› installers"
+# find the installers and run them iteratively
+find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
 
 echo ''
 echo '  All stuff installed!'
