:ok_hand: update ZSH install to fix "non-standard shell error" https://github.com/thoughtbot/laptop/issues/447

--- a/scripts/install
+++ b/scripts/install
@@ -27,6 +27,10 @@ macos/defaults.sh
 
 # Third, ZSH
 echo "› Set ZSH as default"
+ZSH_PATH=$(which zsh)
+if ! grep -q $ZSH_PATH '/etc/shells'; then
+  echo $ZSH_PATH | sudo tee -a /etc/shells
+fi
 chsh -s $(which zsh)
 
 echo "› installers"
